--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body
 }
 .title_page
 {
+    flex: 100%;
     width: 100%;
     height: 800px;
     z-index: -1;
@@ -42,11 +43,16 @@ body
     background-size: cover;
     background-repeat: no-repeat;
 }
-p.p_little
+div.little
 {
     display: flex;
     flex-direction: column;
     font-size: 16px;
+}
+p.p_little
+{
+    font-size: 15px;
+    padding: 3px;
 }
 p.p_small
 {
@@ -109,6 +115,7 @@ h2.h_small
     line-height: 1.8;
     transition-duration: .6s;
     color: #000;
+    cursor: pointer;
 }
 #links a:hover
 {
@@ -140,6 +147,8 @@ h2.h_small
     color: #fff;
     font-size: 15px;
     padding: 15px;
+    transition-duration: .5s;
+    transition-timing-function: ease-in-out;
 }
 .nav a:hover
 {
@@ -167,12 +176,12 @@ h2.h_small
 }
 .donate > .color_article
 {
-    flex: 60%;
+    flex: 50%;
 }
 .image
 {
     width: 50%;
-    flex: 40%;
+    flex: 50%;
     background-image: url(ludzie.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -187,18 +196,18 @@ h2.h_small
     padding: 13px;
     background-color: rgb(130, 126, 187);
     cursor: pointer;
+    transition-duration: .4s;
+    transition-timing-function: ease-in-out;
 }
 .button > a
 {
     text-decoration: none;
     color: white;
     text-transform: uppercase;
-    
 }
 .button:hover
 {
     background-color: rgb(86, 83, 129);
-    transition-duration: .4s;
 }
 .white_article
 {
@@ -234,10 +243,13 @@ list-style: none;
 {
     background-color: rgb(130, 126, 187);
     cursor: pointer;
+    transition-duration: .5s;
+    
 }
 #join:hover
 {
     color: black;
+    font-size: 16px;
 }
 input
 {
@@ -258,15 +270,12 @@ input:focus
 {
     background-color: rgb(130, 126, 187);
     width: 100%;
-    padding: 5px;
     color: white;
-    font-size: 11px;
 }
 @media screen and (max-width: 900px)
 {
-    .nav
+    .nav, .info, .blocks, .donate
     {
         flex-direction: column;
-        align-items: 
     }
 }
