--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body
     width: 100%;
     height: 800px;
     z-index: -1;
-    background-image: url(megafon.jpg);
+    background-image: url(megafon2.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -351,7 +351,7 @@ form > input
     right: 10px;
     width: 50px;
     height: 50px;
-    border-radius: 100px;
+    border-radius: 50px;
     background-color: white;
     background-image: url(logo.png);
     background-position: center;
@@ -385,7 +385,7 @@ form > input
     {
         font-size: 8.5vw;
     }
-    p.p_small
+    p.p_small, p.p_big
     {
         width: 85%;
     }
